# ewig

./: .gitmodules  CMakeLists.txt  README.md  default.nix  shell.nix
.github/workflows/: test.yml
nix/: deps.nix
src/: main.cpp
src/ewig/: application.cpp  application.hpp  buffer.cpp  buffer.hpp  coord.hpp  draw.cpp  draw.hpp  effects.hpp  io_service.hpp  keys.cpp  keys.hpp  main.cpp  main.hpp  model.cpp  model.hpp  store.hpp  terminal.cpp  terminal.hpp  tui.cpp  tui.hpp  utils.hpp
